--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.1",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
